# osc_server_for_heat_sensor

./: .gitignore  docker-compose.yml  dockerfile  pyproject.toml  test_capture.py
scarecrow_py/: config.py  main.py
scarecrow_py/video/: capture.py  extract_numbers.py  gc_image.py  handling.py  heat_sensor.py  save_pic.py
tests/: test_osc.py
